[fix][sonar | issues-services][V01]: se corrigen las issues de los paquetes se…
[calegria]
Al aplicar la corrección de sonar en los streams, de pasaron de inmutables a mutables. Esto genero errores al crear los nuevos usuarios.